--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "RESTful API boilerplate with Typescript, TypeORM, ExpressJs & Mocha.",
   "scripts": {
-    "dev": "debug=* NODE_PATH=./src ts-node-dev --respawn ./src/index.ts",
+    "dev": "nodemon src/index.ts",
     "build": "rimraf dist && tsc",
     "start": "NODE_PATH=./dist node ./dist/index.js",
     "lint": "eslint --max-warnings 0 --ext .js,ts src",
@@ -15,7 +15,11 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "helmet": "^4.6.0",
+    "mime-types": "^2.1.34",
+    "moment": "^2.29.1",
     "morgan": "^1.10.0",
+    "multer": "^1.4.3",
+    "nodemon": "^2.0.15",
     "pg": "^8.7.1",
     "typeorm": "^0.2.41",
     "typeorm-naming-strategies": "^2.0.0",
@@ -29,8 +33,10 @@
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/helmet": "4.0.0",
+    "@types/mime-types": "^2.1.1",
     "@types/mocha": "^9.0.0",
     "@types/morgan": "^1.9.3",
+    "@types/multer": "^1.4.7",
     "@types/node": "^16.11.11",
     "@types/supertest": "^2.0.11",
     "@types/validator": "^13.7.0",
