feat: Added Connection to the Database using typeORM

--- a/.env
+++ b/.env
@@ -1,2 +1,8 @@
 NODE_ENV=dev
 PORT=4000
+
+PG_HOST=localhost
+PG_PORT=5432
+POSTGRES_USER=philipepsql
+POSTGRES_PASSWORD=123
+POSTGRES_DB=challengemagiculdb
