--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "helmet": "^4.6.0",
+    "jest": "^27.4.4",
     "mime-types": "^2.1.34",
     "moment": "^2.29.1",
     "morgan": "^1.10.0",
