--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "reflect-metadata": "^0.1.13",
     "typeorm": "^0.2.41",
     "typeorm-naming-strategies": "^2.0.0",
-    "validator": "^13.7.0"
+    "validator": "^13.7.0",
+    "dotenv": "^10.0.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^15.0.0",
@@ -46,7 +47,6 @@
     "@typescript-eslint/parser": "^5.5.0",
     "chai": "^4.3.4",
     "commitizen": "^4.2.4",
-    "dotenv": "^10.0.0",
     "eslint": "^8.4.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.25.3",
