--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "helmet": "^4.6.0",
     "jest": "^27.4.4",
@@ -25,8 +26,7 @@
     "reflect-metadata": "^0.1.13",
     "typeorm": "^0.2.41",
     "typeorm-naming-strategies": "^2.0.0",
-    "validator": "^13.7.0",
-    "dotenv": "^10.0.0"
+    "validator": "^13.7.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^15.0.0",
